jugando con figuras, posiciones y rotaciones

--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A-Frame project</title>
 </head>
 <body>
-    <a-scene></a-scene>
+    <a-scene>
+        <a-box color="green" width="4" height="4" depth="4" position="-2 1.5 -9"></a-box>
+        <a-box color="brown" width="4" height="4" depth="4" position="3 1.5 -9"></a-box>
+    </a-scene>
     
 </body>
 </html>
