agrego y testeo las texturas

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <a-scene>
-        <a-box color="green" width="4" height="4" depth="4" position="-2 1.5 -9"></a-box>
-        <a-box color="brown" width="4" height="4" depth="4" position="3 1.5 -9"></a-box>
+        <a-assets>
+            <img id="brick-red" src="img/brick-red-texture.jpg">
+            <img id="raretexture" src="img/raretexture.jpg">
+        </a-assets>
+        <a-box src="#brick-red" normal-texture-repeat="1 1" normal-scale="1 -1" width="4" height="4" depth="4" position="-2 1.5 -9"></a-box>
+        <a-box src="#raretexture" normal-texture-repeat="1 1" normal-scale="1 -1" width="4" height="4" depth="4" position="3 1.5 -9"></a-box>
     </a-scene>
     
 </body>
