a-sky & a-plane con texturas

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
         <a-assets>
             <img id="brick-red" src="img/brick-red-texture.jpg">
             <img id="raretexture" src="img/raretexture.jpg">
+            <img id="ceramica" src="img/ceramica.jpg">
+            <img id="grass" src="img/grass.jpg">
         </a-assets>
+        <a-sky src="img/Evening in Park.jpg" rotation="0 64 0" radius="1500" side="double" position="0 200 0"></a-sky>
         <a-box src="#brick-red" normal-texture-repeat="1 1" normal-scale="1 -1" width="4" height="4" depth="4" position="-2 1.5 -9"></a-box>
         <a-box src="#raretexture" normal-texture-repeat="1 1" normal-scale="1 -1" width="4" height="4" depth="4" position="3 1.5 -9"></a-box>
+        <a-plane src="#grass" shader="flat" rotation="-90 0 0" repeat= "5 5" normal-texture-repeat="5 5" scale="100 100 1" position="0 0 0"></a-box>
     </a-scene>
     
 </body>
